
## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools
- `devel/export-map`: export map tile data to a JSON file
- `autocheese`: automatically make cheese using barrels that have accumulated sufficient milk
- `gui/spectate`: interactive UI for configuring `spectate`
- `gui/notes`: UI for adding and managing notes attached to tiles on the map

## New Features
- `advtools`: new ``advtools.fastcombat`` overlay (enabled by default)  allows you to skip combat animations and the announcement "More" button by mashing the movement keys

## Fixes
- `position`: support for adv mode look cursor

## Misc Improvements
- `hide-tutorials`: handle tutorial popups for adventure mode
- `hide-tutorials`: new ``reset`` command that will re-enable popups in the current game (in case you hid them all and now want them back)
- `gui/notify`: moody dwarf notification turns red when they can't reach workshop or items
- `gui/confirm`: in the delete manager order confirmation dialog, show a description of which order you have selected to delete
- `position`: display both adventurer and site pos simultaneously. Display map block pos+offset of selected tile.

## Removed

# 51.04-r1.1

## Fixes
- `advtools`: fix dfhack-added conversation options not appearing in the ask whereabouts conversation tree
- `gui/rename`: fix error when changing the language of a unit's name

## Misc Improvements
- `assign-preferences`: new ``--show`` option to display the preferences of the selected unit
- `pref-adjust`: new ``show`` command to display the preferences of the selected unit

## Removed
- `gui/control-panel`: removed ``craft-age-wear`` tweak for Windows users; the tweak doesn't currently load on Windows

# 51.02-r1

## Fixes
- `deathcause`: fix error when retrieving the name of a historical figure

# 50.15-r2

## New Tools
- `fix/stuck-squad`: allow squads and messengers returning from missions to rescue squads that have gotten stuck on the world map